--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,171 @@
+body {
+  background-color: azure;
+}
+
+.back-color {
+  display: flex;
+  justify-content: space-evenly;
+  background-color: azure;
+}
+
+.login-form {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgb(153, 145, 145);
+  height: 780px;
+}
+.form-edit {
+  background-color: rgb(68, 70, 65);
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.table-edit {
+  background-color: #37393d;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.text-edit {
+  display: flex;
+  justify-content: center;
+}
+
+#item-center {
+  text-align: center;
+  border: solid 1px white;
+  border-radius: 5px;
+}
+
+#item-center:hover {
+  background-color: #4CAF50;
+}
+
+.add {
+  display: inline-block;
+  padding: 6px 10px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  color: #fff;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 6px #999;
+}
+
+.add:hover {background-color: #3e8e41}
+
+.add:active {
+  background-color: #3e8e41;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.item-edit {
+  background-color: yellow;
+  color: #37393d;
+}
+
+.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 16px;
+  padding: 15px;
+  width: 100px;
+  transition: all 0.5s;
+  margin: 5px;
+}
+
+
+.button-login {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 16px;
+  padding: 15px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.button-login span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button-login span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button-login:hover span {
+  padding-right: 25px;
+}
+
+.button-login:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.edit-button {
+  background-color: #f4e61e;
+  border: none;
+  color: black;
+  padding: 6px 12px;
+  text-align: center;
+  font-size: 12px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.edit-button:hover {opacity: 1}
+
+.delete-button {
+  background-color: #f4501ef8;
+  border: none;
+  color: rgb(7, 1, 1);
+  padding: 6px 12px;
+  text-align: center;
+  font-size: 12px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.delete-button:hover {opacity: 1}
+
 .App {
   text-align: center;
 }
@@ -12,21 +180,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  align-items: center;
-  background-color: #282c34;
-  color: white;
-  display: flex;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
-  justify-content: center;
-  min-height: 100vh;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
